# IndiaInc-today

./: .gitignore  AGENTS.md  README.md  bse_xbrl_census.py  pyproject.toml  xbrl_samples.py
.context/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DESIGN.md  OVERVIEW.md
.github/workflows/: daily-digest.yml
scripts/: send_discord_webhook.py
src/indiainc_today/: __init__.py  cli.py  config.py  core.py  enrichment.py  industry.py  retries.py  utils.py  xbrl_fetcher.py  xbrl_parser.py
tests/: test_cli.py  test_industry.py  test_parser.py  test_webhook.py
