[project]
name = "indiainc-today"
version = "0.1.0"
description = "Daily digest of key corporate XBRL announcements from NSE, enriched with market data & industry, delivered to Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "nse[server]>=3.0.0",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[project.scripts]
indiainc-today = "indiainc_today.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


